openshift/xwiki/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: xwiki
  name: xwiki
  namespace: wiki
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: xwiki
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: xwiki
    spec:
      containers:
      - env:
        - name: TZ
          value: Europe/Moscow
        - name: DB_HOST
          value: xwiki-db
        - name: DB_USER
          valueFrom:
            secretKeyRef:
              key: database-user
              name: xwiki-db
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: database-password
              name: xwiki-db
        - name: CATALINA_OPTS
          value: "-server -Xms1024m -Xmx2048m -Dfile.encoding=utf-8 -Djava.awt.headless=true -XX:+UseParallelGC -XX:MaxGCPauseMillis=100 -Djava.security.egd=file:/dev/./urandom -Djavax.servlet.context.tempdir=/tmp/xwiki"
        image: xwiki:15.10.8-postgres-tomcat
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 20
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 3
        name: xwiki
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 20
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 1
        resources:
          limits:
            cpu: "4"
            memory: 4Gi
          requests:
            cpu: "4"
            memory: 4Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /usr/local/xwiki
          name: xwiki-main-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: xwiki-sa
      serviceAccountName: xwiki-sa
      terminationGracePeriodSeconds: 30
      volumes:
      - name: xwiki-main-data
        persistentVolumeClaim:
          claimName: xwiki-main-data
---
apiVersion: v1
kind: Service
metadata:
  name: xwiki
  namespace: wiki
  labels:
    app: xwiki
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: xwiki
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: xwiki
  namespace: wiki
spec:
  host: xwiki.cluster.localmachine.localhost
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: xwiki
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - host: xwiki.cluster.localmachine.localhost
